--- a/OkaneFlow/Pages/Dashboard/Category/CategoryPage.cshtml
+++ b/OkaneFlow/Pages/Dashboard/Category/CategoryPage.cshtml
@@ -21,7 +21,7 @@
                     Add Category
                 </button>
             </form>
-        </div>
+        </div>i
         <div>
             <p>Total Amount:</p>
             <div style="border: 1px solid black; padding: 10px; margin-top: 10px;">
@@ -30,16 +30,17 @@
             </div>
         </div>
     </div>
-<a asp-page="/Dashboard/Category/create" asp-route-id="" class="btn btn-primary">Create</a>
+ </div>
+<a asp-page="/Dashboard/Category/create" asp-route-id="@Model.id" class="btn btn-primary">Create</a>
 
 <table class="table table-hover">
     <thead>
         <tr>
             <th scope="col" hidden>CategoryID</th>
             <th scope="col" hidden>AccountID</th>
-            <th scope="col">Allocated Amount</th>
+                <th scope="col">Category Name</th>
+                <th scope="col">Allocated Amount</th>
             <th scope="col">AmountUsed</th>
-            <th scope="col">Category Name</th>
             <th scope="col"></th>
         </tr>
     </thead>
@@ -56,8 +57,8 @@
                     <div class="dropdown">
                     <a class="btn btn-primary dropdown-toggle" role="button" data-bs-toggle="dropdown" aria-expanded="false"></a>
                     <ul class="dropdown-menu">
-                        <li><a class="dropdown-item" asp-page="/Dashboard/Category/edit" asp-route-id="@category.AccountID">Edit</a></li>
-                        <li><a class="dropdown-item" asp-page="/Dashboard/Category/delete" asp-route-id="@category.AccountID">Delete</a></li>
+                        <li><a class="dropdown-item" asp-page="/Dashboard/Category/edit" asp-route-id="@category.CategoryID">Edit</a></li>
+                        <li><a class="dropdown-item" asp-page="/Dashboard/Category/delete" asp-route-id="@category.CategoryID">Delete</a></li>
                     </ul>
                     </div>
                 </td>
