I removed some unnecessary files and made the assigning amount to category function work with all the necessary helping calculations

--- a/OkaneFlow/Pages/Dashboard/Category/create.cshtml
+++ b/OkaneFlow/Pages/Dashboard/Category/create.cshtml
@@ -3,6 +3,7 @@
 @{
 }
 <h2>Create New Category</h2>
+<button type="button" onclick="goBack()" class="btn btn-secondary">Back</button>
 
 <form method="post">
     <div>
