--- a/OkaneFlow/Pages/Dashboard/Category/edit.cshtml
+++ b/OkaneFlow/Pages/Dashboard/Category/edit.cshtml
@@ -2,6 +2,7 @@
 @model OkaneFlow.Pages.Dashboard.Category.editModel
 
 <h2>Edit Bank Account</h2>
+<button type="button" onclick="goBack()" class="btn btn-secondary">Back</button>
 
 <form method="post">
     <input type="hidden" asp-for="CategoryDetails.AccountID" />
