--- a/OkaneFlow/Pages/Dashboard/MainDashboard/create.cshtml
+++ b/OkaneFlow/Pages/Dashboard/MainDashboard/create.cshtml
@@ -3,7 +3,7 @@
 @{
 }
 <h2>Create New Bank Account</h2>
-<h2>Edit Bank Account</h2>
+<button type="button" onclick="goBack()" class="btn btn-secondary">Back</button>
 
 <form method="post">
     <div>
