I added user management, authorization and authentications to every page, added a lookup table replacing the enum, added current user helpers, changed the UI.

--- a/OkaneFlow/Pages/Dashboard/MainDashboard/Dashboard.cshtml
+++ b/OkaneFlow/Pages/Dashboard/MainDashboard/Dashboard.cshtml
@@ -28,6 +28,7 @@
                     <a asp-page="/Dashboard/MainDashboard/edit" asp-route-id="@account.AccountID" class="btn btn-primary">Edit</a>
                     <a asp-page="/Dashboard/MainDashboard/delete" asp-route-id="@account.AccountID" class="btn btn-danger">Delete</a>
                     <a asp-page="/Dashboard/Category/CategoryPage" asp-route-id="@account.AccountID" class="btn btn-success">View</a>
+                    <a asp-page="/Transactions/Transactions" asp-route-accountId="@account.AccountID" class="btn btn-sm btn-outline-primary position-relative z-2">Transactions</a>
                 </td>
             </tr>
         }
