--- a/OkaneFlow/Pages/Shared/_Layout.cshtml
+++ b/OkaneFlow/Pages/Shared/_Layout.cshtml
@@ -39,6 +39,11 @@
                         <span class="me-2"><i class="bi bi-people"></i></span> People
                     </a>
                 </li>
+                <li class="nav-item mb-2">
+                    <a class="nav-link d-flex align-items-center text-dark" asp-area="" asp-page="/Account/Logout">
+                        <span class="me-2"><i class="bi bi-box-arrow-right"></i></span> Logout
+                    </a>
+                </li>
             </ul>
         </nav>
         <div class="flex-grow-1 d-flex flex-column">
