--- a/OkaneFlow/Pages/Account/Register.cshtml
+++ b/OkaneFlow/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
     Layout = null; // simple standalone page
 }
-
+<style></style>
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
