--- a/OkaneFlow/wwwroot/css/site.css
+++ b/OkaneFlow/wwwroot/css/site.css
@@ -29,3 +29,11 @@ body {
 .form-floating > .form-control-plaintext:focus::placeholder, .form-floating > .form-control:focus::placeholder {
   text-align: start;
 }
+form a {
+    color: #0d6efd; /* Bootstrap primary color */
+    text-decoration: underline; /* restore underline */
+}
+
+    form a:hover {
+        text-decoration: none; /* optional hover effect */
+    }
